--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/CrossSellProductAddPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/CrossSellProductAddPopup.cshtml
@@ -54,6 +54,14 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.SearchStoreId)
+            </td>
+            <td class="adminData">
+                @Html.DropDownList("SearchStoreId", Model.AvailableStores)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.SearchProductTypeId)
             </td>
             <td class="adminData">
@@ -66,8 +74,9 @@
             </td>
         </tr>
     </table>
-    <p>
-    </p>
+    
+    <p></p>
+    
     <table class="adminContent">
         <tr>
             <td>
@@ -76,29 +85,27 @@
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.Id)
-                        .Template(
-                                @<text>
-                <input name="SelectedProductIds" type="checkbox" value="@item.Id " />
-                </text>
-                        )
-                        .ClientTemplate("<input type='checkbox' name='SelectedProductIds' value='<#= Id #>' />")
-                        .Title(T("Admin.Common.Check").Text)
-                        .Width(50);
+                            .Template(x => string.Format("<input type='checkbox' name='SelectedProductIds' value='{0}' class='checkboxGroups'/>", x.Id))
+                            .ClientTemplate("<input type='checkbox' name='SelectedProductIds' value='<#= Id #>' class='checkboxGroups'/>")
+                            .Width(50)
+                            .HtmlAttributes(new { style = "text-align:center" });
                         columns.Bound(x => x.Name);
+                        columns.Bound(x => x.Sku);
                         columns.Bound(x => x.Published)
-                            .Width("100px")
                             .Template(item => @Html.SymbolForBool(item.Published))
                             .ClientTemplate(@Html.SymbolForBool("Published"))
-                            .Centered();
+                            .Centered()
+                            .Width(100);
                     })
                     .Pageable(settings => settings.Total(Model.Products.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("CrossSellProductAddPopupList", "Product"))
-                    .ClientEvents(events => events.OnDataBinding("onDataBinding"))
+                    .ClientEvents(events => events.OnDataBinding("crossSellProducts_onDataBinding"))
                     .EnableCustomBinding(true))
             </td>
         </tr>
         <tr>
             <td colspan="2">
+                <p></p>
                 <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
             </td>
         </tr>
@@ -112,20 +119,21 @@
                 grid.ajaxRequest();
                 return false;
             });
+
+            $("#@Html.FieldIdFor(model => model.SearchProductName)").keydown(function (event) {
+                if (event.keyCode == 13) {
+                    $("#search-products").click();
+                    return false;
+                }
+            });
         });
 
-        $("#@Html.FieldIdFor(model => model.SearchProductName)").keydown(function (event) {
-            if (event.keyCode == 13) {
-                $("#search-products").click();
-                return false;
-            }
-        });
-
-        function onDataBinding(e) {
+        function crossSellProducts_onDataBinding(e) {
             var searchModel = {
                 SearchProductName: $('#@Html.FieldIdFor(model => model.SearchProductName)').val(),
                 SearchCategoryId: $('#SearchCategoryId').val(),
                 SearchManufacturerId: $('#SearchManufacturerId').val(),
+                SearchStoreId: $('#SearchStoreId').val(),
                 SearchProductTypeId: $('#SearchProductTypeId').val()
             };
             e.data = searchModel;
