--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
@@ -32,13 +32,20 @@
                         })
                         .Columns(columns =>
                         {
-                            columns.Bound(x => x.Id)
-                                .ReadOnly();
                             columns.Bound(x => x.ProductName)
                                 .ReadOnly()
                                 .Template(x => Html.ActionLink(x.ProductName, "Edit", "Product", new { id = x.Id }, new { }))
                                 .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Product/Edit/") + "<#= Id #>\"><#= ProductName #></a>");
+                            columns.Bound(x => x.Sku)
+                                .ReadOnly();
+                            columns.Bound(x => x.Published)
+                                .ReadOnly()
+                                .Width(100)
+                                .Template(item => @Html.SymbolForBool(item.Published))
+                                .ClientTemplate(@Html.SymbolForBool("Published"))
+                                .Centered();
                             columns.Bound(x => x.DisplayOrder)
+                                .Width(100)
                                 .Centered();
                             columns.Command(commands =>
                             {
@@ -52,8 +59,12 @@
             </tr>
             <tr>
                 <td width="100%">
-                    <input type="submit" id="btnAddNewAssociatedProduct" name="btnAddNewAssociatedProduct" value="@T("Admin.Catalog.Products.AssociatedProducts.AddNew")" 
-                        onclick="javascript:OpenWindow('@(Url.Action("AssociatedProductAddPopup", "Product", new { productId = Model.Id, btnId = "btnRefreshAssociatedProducts", formId = "product-form" }))', 800, 800, true); return false;" class="btn" />
+                    <p></p>
+                    <button type="submit" id="btnAddNewAssociatedProduct" name="btnAddNewAssociatedProduct" class="btn"
+                        onclick="javascript:OpenWindow('@(Url.Action("AssociatedProductAddPopup", "Product", new { productId = Model.Id, btnId = "btnRefreshAssociatedProducts", formId = "product-form" }))', 1000, 700, true); return false;">
+                        <i class="icon-plus"></i>
+                        @T("Admin.Catalog.Products.AssociatedProducts.AddNew")
+                    </button>
 
                     <input type="submit" id="btnRefreshAssociatedProducts" name="btnRefreshAssociatedProducts" style="display: none" />
 
