--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.CrossSells.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.CrossSells.cshtml
@@ -25,18 +25,30 @@
                             .ReadOnly()
                             .Template(x => Html.ActionLink(x.Product2Name, "Edit", "Product", new { id = x.ProductId2 }, new { }))
                             .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Product/Edit/") + "<#= ProductId2 #>\"><#= Product2Name #></a>");
+                        columns.Bound(x => x.Product2Sku);
+                        columns.Bound(x => x.Product2Published)
+                            .Width(100)
+                            .Template(item => @Html.SymbolForBool(item.Product2Published))
+                            .ClientTemplate(@Html.SymbolForBool("Product2Published"))
+                            .Centered();
                         columns.Command(commands =>
                         {
                             commands.Delete().Localize(T);
                         })
-                        .Width(180);
+                        .Width(90);
                     })
                     .EnableCustomBinding(true))
             </td>
         </tr>
         <tr>
             <td width="100%">
-                <input type="submit" id="btnAddNewCrossSellProduct" name="btnAddNewCrossSellProduct" value="@T("Admin.Catalog.Products.CrossSells.AddNew")" onclick="javascript:OpenWindow('@(Url.Action("CrossSellProductAddPopup", "Product", new { productId = Model.Id, btnId = "btnRefreshCrossSellProducts", formId = "product-form" }))', 800, 700, true); return false;" class="btn" />
+                <p></p>
+                <button type="submit" id="btnAddNewCrossSellProduct" name="btnAddNewCrossSellProduct" class="btn"
+                    onclick="javascript:OpenWindow('@(Url.Action("CrossSellProductAddPopup", "Product", new { productId = Model.Id, btnId = "btnRefreshCrossSellProducts", formId = "product-form" }))', 1000, 700, true); return false;">
+                    <i class="icon-plus"></i>
+                    @T("Admin.Catalog.Products.CrossSells.AddNew")
+                </button>
+
                 <input type="submit" id="btnRefreshCrossSellProducts" name="btnRefreshCrossSellProducts" style="display: none" />
                 <script type="text/javascript">
                     $(document).ready(function () {
