--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -302,9 +302,9 @@
     }
 </script>
 
-@if (Model.Id > 0)
-{
-    <table class="adminContent">
+<table class="adminContent">
+    @if (Model.Id > 0)
+    {
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.Id)
@@ -314,47 +314,47 @@
                 @Html.ValidationMessageFor(model => model.Id)
             </td>
         </tr>
+    }
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.ProductTypeId)
+        </td>
+        <td class="adminData">
+            @Html.DropDownListFor(model => model.ProductTypeId, ((ProductType)Model.ProductTypeId).ToSelectList())
+            @Html.ValidationMessageFor(model => model.ProductTypeId)
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.VisibleIndividually)
+        </td>
+        <td class="adminData">
+            @Html.EditorFor(model => model.VisibleIndividually)
+            @Html.ValidationMessageFor(model => model.VisibleIndividually)
+        </td>
+    </tr>
+    @if (Model.Id > 0 && Model.AssociatedToProductId > 0)
+    {
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ProductTemplateId)
+                @Html.SmartLabelFor(model => model.AssociatedToProductId)
             </td>
             <td class="adminData">
-                @Html.DropDownListFor(model => model.ProductTemplateId, Model.AvailableProductTemplates)
-                @Html.ValidationMessageFor(model => model.ProductTemplateId)
+                @Html.ActionLink(Model.AssociatedToProductName, "Edit", "Product", new { id = Model.AssociatedToProductId }, new { })
             </td>
         </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ProductTypeId)
-            </td>
-            <td class="adminData">
-                @Html.DropDownListFor(model => model.ProductTypeId, ((ProductType)Model.ProductTypeId).ToSelectList())
-                @Html.ValidationMessageFor(model => model.ProductTypeId)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.VisibleIndividually)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.VisibleIndividually)
-                @Html.ValidationMessageFor(model => model.VisibleIndividually)
-            </td>
-        </tr>
-        @if (Model.Id > 0 && Model.AssociatedToProductId > 0)
-        {
-            <tr>
-                <td class="adminTitle">
-                    @Html.SmartLabelFor(model => model.AssociatedToProductId):
-                </td>
-                <td class="adminData">
-                    @Html.ActionLink(Model.AssociatedToProductName, "Edit", "Product", new { id = Model.AssociatedToProductId }, new { })
-                </td>
-            </tr>
-        }
-    </table>
-    <p></p>
-}    
+    }
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.ProductTemplateId)
+        </td>
+        <td class="adminData">
+            @Html.DropDownListFor(model => model.ProductTemplateId, Model.AvailableProductTemplates)
+            @Html.ValidationMessageFor(model => model.ProductTemplateId)
+        </td>
+    </tr>
+</table>
+<p></p>
 
 @(Html.LocalizedEditor<ProductModel, ProductLocalizedModel>("product-info-localized",
     @<table class="adminContent">
@@ -426,15 +426,6 @@
 <table class="adminContent">
     <tr>
         <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.AdminComment)
-        </td>
-        <td class="adminData">
-            @Html.TextAreaFor(model => model.AdminComment)
-            @Html.ValidationMessageFor(model => model.AdminComment)
-        </td>
-    </tr>
-    <tr>
-        <td class="adminTitle">
             @Html.SmartLabelFor(model => model.Sku)
         </td>
         <td class="adminData">
@@ -458,6 +449,15 @@
         <td class="adminData">
             @Html.EditorFor(model => model.Gtin)
             @Html.ValidationMessageFor(model => model.Gtin)
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.AdminComment)
+        </td>
+        <td class="adminData">
+            @Html.TextAreaFor(model => model.AdminComment)
+            @Html.ValidationMessageFor(model => model.AdminComment)
         </td>
     </tr>
     <tr>
