Admin > AllSettings: Fixed shop dropdown cast exception

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/AllSettings.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/AllSettings.cshtml
@@ -57,6 +57,7 @@
             <script type="text/javascript">
                 function grid_onError(e) {
                     alert(e.XMLHttpRequest.responseText);
+                    console.log(e.XMLHttpRequest.responseText);
                     e.preventDefault();
                 }
 
