--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1,33 +1,7 @@
-﻿.hr() {
-	border-top: 1px solid #ddd; 
-	&:first-child {
-		border-top: none;
-	}
-}
-select {
-	min-width: initial;
-}
-legend {
-	color: #acacac;
-}
-.ajax-loader-small {
-	display: inline-block;
-	position: relative;
-	width: 16px;
-	height: 16px;
-	padding: 0;
-	margin: 0;
-	background: transparent url('images/ajax_loader_small.gif') 50% 50% no-repeat;
-}
-
-// required for placeholder plugin (< IE10)
-input.placeholder {
-	color: @grayLight !important;
-}
+﻿
 
 .control-group.buttons {
 	border-top: 1px solid #ddd;
-	padding-top: 20px;
 }
 
 body {
@@ -37,25 +11,6 @@ body {
 }
 body.popup {
 	background: @bodyBackground;
-	margin: 0;
-	padding: 0;
-	border: 0;
-}
-body.print {
-	background: #fff !important;
-}
-#popup-content {
-	margin: 20px;
-}
-
-.captcha-box {
-	margin-bottom:12px;
-}
-
-nav ul, nav li {
-    margin: 0;
-    padding: 0;
-    list-style-type: none; 
 }
 
 #header {
@@ -726,10 +681,6 @@ form.form-search {
 	display: inline;
 }
 
-/* aus smartstore.base.css */
-/* Hide only visually, but have it available for screenreaders: by Jon Neal. */
-.hidden-accessible 					{ border: 0; clip: rect(0,0,0,0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px }
-
 /* REGIONAL SELECTOR */
 
 .regional-selectors {
@@ -810,43 +761,21 @@ form.form-search {
 }
 
 /* DATA LISTS */
-.data-list .thumbnail .caption { padding: 4px }
-.data-list { }
-.data-list-grid { }
-.data-list-grid .data-list-row,
-.data-list .data-list-item { margin-bottom: 12px; }
 
 .item-box {
     background: @var_BoxBackground;
     border: 1px solid #ddd;
-    position: relative;
-    .small();
     .box-shadow(0 1px 3px rgba(0,0,0,.055));
     .transition(~'box-shadow .12s linear, border-color .12s linear');
-
-    &.no-border {
-        border-color: transparent;
-        .box-shadow(0 1px 3px rgba(0,0,0,.0));
-    }
 
     &:hover {
         border: 1px solid @var_ItemBoxBoxShadowColor;
         .box-shadow(0px 0px 8px fade(@var_ItemBoxBoxShadowColor, 60%));
     }
 }
-.item-box.product-compact {
-	.small();
-	text-align: center;
-}
+
 .item-box .name {
-    font-family: inherit;
-    font-weight: normal;
-    font-size: inherit;
-    line-height: inherit;
     color: inherit;
-    overflow: hidden;
-    margin-bottom: 0.3em;
-    margin-top: 0;
 
     a {
         font-weight: bold;
@@ -859,33 +788,6 @@ form.form-search {
         > span {
             vertical-align: middle;
         }
-
-        // Label 'IsNew' for products
-        .label.label-isnew {
-            font-size: 10px;
-            line-height: 10px;
-            font-weight: normal;
-            text-shadow: none;
-            text-transform: uppercase;
-                
-        }
-    }
-}
-.item-box.details .name {
-    margin-top: 10px;
-}
-.item-box figure.picture {
-    position: relative;
-    z-index: 0;
-    padding: 4px;
-    text-align: center;
-    margin: 0;
-    min-height: 100px;
-
-    a { 
-        display: inline-block; 
-        position: relative;
-        z-index: 0; 
     }
 }
 
@@ -3106,12 +3008,6 @@ table.cart .cart-item-row .qty-input {
 .profile-page .user-last-posts .topic-body .quote{padding:5px;border:dashed 1px #000;background-color:#fff;}
 .profile-page .user-last-posts .topic-data{background:#f3f3f3;padding:3px;color:#555;font-size:.9em;}
 .profile-page .user-last-posts .posts-table{width:100%;border:0px;border-collapse:collapse;border-spacing:0;empty-cells:show;}
-
-
-/* BB CODE EDITOR */
-.toolbar{padding:2px;display:inline;}
-.toolbar .button{background:url(images/bbeditor-button-bg.gif) repeat-x;padding:2px;margin-right:2px;border:#cec6b5 1px solid;}
-.toolbar .button:hover{border:#333 1px solid;}
 
 /* ACTIVE DISCUSSIONS */
 
