--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.cshtml
@@ -6,15 +6,20 @@
 
 @Html.ValidationSummary(false)
 @Html.HiddenFor(model => model.Id)
+
 @Html.SmartStore().TabStrip().Name("product-edit").Style(TabsStyle.Tabs).Position(TabsPosition.Left).Items(x =>
 {
     x.Add().Text(T("Admin.Catalog.Products.Info").Text)
         .Icon("icon-pencil")
         .Content(TabInfo())
         .Selected(true);
-    x.Add().Text(T("Admin.Common.SEO").Text)
-        .Icon("icon-globe")
-        .Content(TabSeo());
+    x.Add().Text(T("Admin.Catalog.Products.Price").Text)
+        .Icon("icon-barcode")
+        .Content(TabPrice());
+    x.Add().Text(T("Admin.Catalog.Products.Discounts").Text)
+        .Icon("icon-signal")
+        .Content(TabDiscounts());    
+    
     x.Add().Text(T("Admin.Catalog.Products.Pictures").Text)
         .Icon("icon-picture")
         .Content(TabPictures());
@@ -24,34 +29,11 @@
     x.Add().Text(T("Admin.Catalog.Products.Manufacturers").Text)
         .Icon("icon-truck")
         .Content(TabManufacturers());
-    x.Add().Text(T("Admin.Catalog.Products.TierPrices").Text)
-        .Icon("icon-signal")
-        .Content(TabTierPrices());
-    x.Add().Text(T("Admin.Catalog.Products.Discounts").Text)
-        .Icon("icon-signal")
-        .Content(TabDiscounts());    
-    x.Add().Text(T("Admin.Catalog.Products.SpecificationAttributes").Text)
-        .Icon("icon-reorder")
-        .Content(TabSpecificationAttributes());
-    x.Add().Text(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes").Text)
-        .Icon("icon-list-alt")
-        .Content(TabAttributes());
-    x.Add().Text(T("Admin.Catalog.Products.ProductVariantAttributes.AttributeCombinations").Text)
-        .Icon("icon-list-alt")
-        .Content(TabAttributeCombinations());    
-    x.Add().Text(T("Admin.Catalog.Products.Acl").Text)
-        .Icon("icon-group")
-        .Content(TabAcl());
-	x.Add().Text(T("Admin.Common.Stores").Text)
-        .Icon("icon-globe")
-        .Content(TabStores());
-    x.Add().Text(T("Admin.Catalog.Products.CrossSells").Text)
+
+    x.Add().Text(T("Admin.Catalog.Products.Promotion").Text)
         .Icon("icon-bullhorn")
-        .Content(TabCrossSells());    
-    x.Add().Text(T("Admin.Catalog.Products.RelatedProducts").Text)
-        .Icon("icon-link")
-        .Content(TabRelatedProducts());
-    
+        .Content(TabPromotion());
+
     if (Model.Id > 0 && Model.ProductTypeId == (int)ProductType.GroupedProduct)
     {
         x.Add().Text(T("Admin.Catalog.Products.AssociatedProducts").Text)
@@ -59,6 +41,23 @@
             .Content(TabAssociatedProducts());
     }
     
+    x.Add().Text(T("Admin.Catalog.Products.ProductVariantAttributes.Attributes").Text)
+        .Icon("icon-list-alt")
+        .Content(TabAttributes());
+    x.Add().Text(T("Admin.Catalog.Products.SpecificationAttributes").Text)
+        .Icon("icon-reorder")
+        .Content(TabSpecificationAttributes());
+    
+    x.Add().Text(T("Admin.Common.SEO").Text)
+        .Icon("icon-globe")
+        .Content(TabSeo());
+    x.Add().Text(T("Admin.Catalog.Products.Acl").Text)
+        .Icon("icon-group")
+        .Content(TabAcl());    
+    x.Add().Text(T("Admin.Common.Stores").Text)
+        .Icon("icon-globe")
+        .Content(TabStores());
+
     //generate an event
     EngineContext.Current.Resolve<IEventPublisher>().Publish(new TabStripCreated(x, "product-edit", this.Html, this.Model));
 })
@@ -66,10 +65,15 @@
 {
     @Html.Partial("_CreateOrUpdate.Info", Model)
 }
-@helper TabSeo()
+@helper TabPrice()
 {
-    @Html.Partial("_CreateOrUpdate.SEO", Model)
+    @Html.Partial("_CreateOrUpdate.Price", Model)
 }
+@helper TabDiscounts()
+{
+    @Html.Partial("_CreateOrUpdate.Discounts", Model)
+}
+
 @helper TabPictures()
 {
     @Html.Partial("_CreateOrUpdate.Pictures", Model)
@@ -82,25 +86,32 @@
 {
     @Html.Partial("_CreateOrUpdate.Manufacturers", Model)
 }
-@helper TabTierPrices()
+
+@helper TabPromotion()
 {
-    @Html.Partial("_CreateOrUpdate.TierPrices", Model)
+    @Html.Partial("_CreateOrUpdate.Promotion", Model)
 }
-@helper TabDiscounts()
+
+@helper TabAssociatedProducts()
 {
-    @Html.Partial("_CreateOrUpdate.Discounts", Model)
+    if (Model.Id > 0 && Model.ProductTypeId == (int)ProductType.GroupedProduct)
+    {
+        @Html.Partial("_CreateOrUpdate.AssociatedProducts", Model)
+    }
+}
+
+@helper TabAttributes()
+{
+    @Html.Partial("_CreateOrUpdate.Attributes", Model)
 }
 @helper TabSpecificationAttributes()
 {
     @Html.Partial("_CreateOrUpdate.SpecificationAttributes", Model)
 }
-@helper TabAttributes()
+
+@helper TabSeo()
 {
-    @Html.Partial("_CreateOrUpdate.Attributes", Model)
-}
-@helper TabAttributeCombinations()
-{
-    @Html.Partial("_CreateOrUpdate.AttributeCombinations", Model)
+    @Html.Partial("_CreateOrUpdate.SEO", Model)
 }
 @helper TabAcl()
 {
@@ -109,19 +120,4 @@
 @helper TabStores()
 {
     @Html.Partial("_CreateOrUpdate.Stores", Model)
-}
-@helper TabCrossSells()
-{
-    @Html.Partial("_CreateOrUpdate.CrossSells", Model)
-}
-@helper TabRelatedProducts()
-{
-    @Html.Partial("_CreateOrUpdate.RelatedProducts", Model)
-}
-@helper TabAssociatedProducts()
-{
-    if (Model.Id > 0 && Model.ProductTypeId == (int)ProductType.GroupedProduct)
-    {
-        @Html.Partial("_CreateOrUpdate.AssociatedProducts", Model)
-    }
 }
