Product\ProductVariant... again unit testing and solved issues

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -99,7 +99,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <button type="submit" id="search-products" value="search-products" class="t-button">@T("Admin.Common.Search")</button>
+                <button type="submit" id="search-products" value="search-products" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
             </td>
         </tr>
     </table>
