--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -381,7 +381,7 @@
                 @Html.SmartLabelFor(model => model.Locales[item].FullDescription)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.Locales[item].FullDescription, "RichEditor")
+                @Html.EditorFor(model => model.Locales[item].FullDescription, Html.RichEditorFlavor())
                 @Html.ValidationMessageFor(model => model.Locales[item].FullDescription)
             </td>
         </tr>
@@ -416,7 +416,7 @@
                 @Html.SmartLabelFor(model => model.FullDescription)
             </td>
             <td class="adminData">
-                @Html.EditorFor(x => x.FullDescription, "RichEditor")
+                @Html.EditorFor(x => x.FullDescription, Html.RichEditorFlavor())
                 @Html.ValidationMessageFor(model => model.FullDescription)
             </td>
         </tr>
