--- a/src/Presentation/SmartStore.Web/Administration/Views/Currency/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Currency/List.cshtml
@@ -16,8 +16,14 @@
             <i class="icon-plus"></i>
             @T("Admin.Common.AddNew")
         </a>
-        <a href="javascript:document.CurrencySettings.submit()" class="btn">@T("Admin.Common.Save")</a>
-        <a href="@Url.Action("List", "Currency", new { liveRates = true })" class="btn">@T("Admin.Configuration.Currencies.GetLiveRates")</a>
+        <a href="javascript:document.CurrencySettings.submit()" class="btn">
+            <i class="icon-ok"></i>
+            @T("Admin.Common.Save")
+        </a>
+        <a href="@Url.Action("List", "Currency", new { liveRates = true })" class="btn">
+            <i class="icon-refresh"></i>
+            @T("Admin.Configuration.Currencies.GetLiveRates")
+        </a>
     </div>
 </div>
 @using (Html.BeginForm("Save", "Currency", FormMethod.Post, new { name = "CurrencySettings" }))
@@ -57,6 +63,7 @@
                             .Centered();
                         columns.Bound(x => x.Rate)
                             .Centered().Format("{0:G29}");
+                        columns.Bound(x => x.DomainEndings);
                         columns.Bound(x => x.IsPrimaryExchangeRateCurrency)
                             .Centered()
                             .Template(item => @Html.SymbolForBool(item.IsPrimaryExchangeRateCurrency))
@@ -65,8 +72,7 @@
                         columns.Bound(x => x.Id)
                             .Template(x => Html.ActionLink(T("Admin.Telerik.GridLocalization.Select").Text, "MarkAsPrimaryExchangeRateCurrency", new { id = x.Id }, new { @class = "btn" }))
                             .Centered()
-                            .HeaderTemplate(T("Admin.Configuration.Currencies.Fields.MarkAsPrimaryExchangeRateCurrency").Text)
-                            .Width("100px");
+                            .HeaderTemplate(T("Admin.Configuration.Currencies.Fields.MarkAsPrimaryExchangeRateCurrency").Text);
                         columns.Bound(x => x.IsPrimaryStoreCurrency)
                             .Centered()
                             .Template(item => @Html.SymbolForBool(item.IsPrimaryStoreCurrency))
@@ -75,21 +81,14 @@
                         columns.Bound(x => x.Id)
                             .Template(x => Html.ActionLink(T("Admin.Telerik.GridLocalization.Select").Text, "MarkAsPrimaryStoreCurrency", new { id = x.Id }, new { @class = "btn" }))
                             .Centered()
-                            .HeaderTemplate(T("Admin.Configuration.Currencies.Fields.MarkAsPrimaryStoreCurrency").Text)
-                            .Width(100);
+                            .HeaderTemplate(T("Admin.Configuration.Currencies.Fields.MarkAsPrimaryStoreCurrency").Text);
                         columns.Bound(x => x.Published)
                             .Template(item => @Html.SymbolForBool(item.Published))
                             .ClientTemplate(@Html.SymbolForBool("Published"))
-                            .Centered();
-                        //columns.Bound(x => x.Id)
-                        //    .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
-                        //    .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
-                        //    .Centered()
-                        //    .HeaderTemplate(T("Admin.Common.Edit").Text);
+                            .Centered()
+                            .Width(100);
                     })
-                    //.DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Currency"))
-                    //.EnableCustomBinding(true)
-                    )
+            )
         </td>
     </tr>
 </table>
