--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -217,6 +217,16 @@
     .opacity(100);
 }
 
+.ajax-loader-small {
+    display: inline-block;
+    position: relative;
+    width: 16px;
+    height: 16px;
+    padding: 0;
+    margin: 0;
+    background: transparent url('images/ajax_loader_small.gif') 50% 50% no-repeat;
+}
+
 #content {
     position: relative;
     height: auto;
