--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Attributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Attributes.cshtml
@@ -169,16 +169,15 @@
                             .ClientTemplate(@Html.SymbolForBool("AllowOutOfStockOrders"))
                             .Centered();
                         columns.Bound(x => x.Id)
-                            .Width(120)
+                            .Width(90)
                             .Centered()
                             .ClientTemplate("<button onclick=\"" + "OpenWindow('" + @Url.Content("~/Admin/Product/AttributeCombinationEditPopup/") + "<#= Id #>?btnId=btnRefreshCombinations&formId=product-form', 1000, 800, true); return false;\" class='btn'>" + @T("Admin.Common.Edit").Text + "</button>")
-                            .Title(T("Admin.Common.Edit").Text);
+                            .Title("");
                         columns.Command(commands =>
-                        {
-                            commands.Delete().Localize(T);
-                        })
-                        .Width(120)
-                        .Title(T("Admin.Common.Delete").Text);
+                            {
+                                commands.Delete().Localize(T);
+                            })
+                            .Width(90);
                     })
                     .ClientEvents(events => events.OnRowDataBound("onRowDataBound_Combinations"))
                     .EnableCustomBinding(true))
